# PandoraTrader

./: build_local_test.sh
.github/: README.md
.github/workflows/: build.yml
Interface/include/: cwAgentManager.h  cwBasicAgent.h  cwBasicCout.h  cwBasicKindleStrategy.h  cwBasicMdSpi.h  cwBasicSimulator.h  cwBasicStrategy.h  cwBasicTradeSpi.h  cwCommonUtility.h  cwFemasMdSpi.h  cwFemasTradeSpi.h  cwFtdMdSpi.h  cwFtdTradeSpi.h  cwInterfaceDefine.h  cwKindleStick.h  cwKindleStickSeries.h  cwLog.h  cwMarketTime.h  cwNetValueEvaluation.h  cwPegasusSimulator.h  cwProductTradeTime.h  cwSettlement.h  cwSimMdSpi.h  cwSimTradeSpi.h  cwTimeStamp.h  cwTradeCommonDefine.h
PandoraSimulator/: CMakeLists.txt  PandoraSimulator.cpp
PandoraStrategy/: cwBasicCTAStrategy.cpp  cwBasicCTAStrategy.h  cwCTAPlatform.cpp  cwCTAPlatform.h  cwChasingRisingStrategy.cpp  cwChasingRisingStrategy.h  cwDualTrust.h  cwEmptyStrategy.cpp  cwEmptyStrategy.h  cwMarKetDataReceiverToLocalKindle.cpp  cwMarKetDataReceiverToLocalKindle.h  cwMarketDataReceiver.cpp  cwMarketDataReceiver.h  cwNetValueEvaluation.cpp  cwNetValueEvaluation.h  cwPandoraAgentManager.h  cwPandoraPairTrading.cpp  cwPandoraPairTrading.h  cwPandoraPositionAgent.cpp  cwPandoraPositionAgent.h  cwStrategyDemo.cpp  cwStrategyDemo.h
PandoraTrade/: CMakeLists.txt  PandoraDemoStrategyTrader.cpp
